# dotvar

./: .gitignore  Makefile  README.md  dotvar_README.md  pyproject.toml  pytest.ini  setup.py
dot_env/: __init__.py  env_loader.py
dot_env/__tests__/: test_env_loader.py
dotvar/__tests__/: test_autoload.py
skill/: dotvar.md
